--- a/Dockerfile-arm64v8
+++ b/Dockerfile-arm64v8
@@ -6,10 +6,10 @@ ENV GOPATH /
 WORKDIR /
 
 #COPY . . if you update the libs below build with --no-cache
-RUN go get -u github.com/gorilla/mux
-RUN go get -u golang.org/x/net/websocket
-RUN go get -u github.com/toshbrown/lib-go-databox
-RUN go get -u github.com/sausheong/hs1xxplug
+RUN go get -d github.com/gorilla/mux
+RUN go get -d golang.org/x/net/websocket
+RUN go get -d github.com/toshbrown/lib-go-databox
+RUN go get -d github.com/sausheong/hs1xxplug
 COPY . .
 RUN addgroup -S databox && adduser -S -g databox databox
 RUN GGO_ENABLED=0 GOOS=linux go build -a -tags netgo -installsuffix netgo -ldflags '-s -w' -o app /src/*.go
