switch to cgreenhalgh plug lib; show name in description

--- a/Dockerfile-arm64v8
+++ b/Dockerfile-arm64v8
@@ -7,7 +7,7 @@ WORKDIR /
 #COPY . . if you update the libs below build with --no-cache
 RUN go get -d github.com/gorilla/mux
 RUN go get -d github.com/me-box/lib-go-databox
-RUN go get -d github.com/sausheong/hs1xxplug
+RUN go get -d github.com/cgreenhalgh/hs1xxplug
 COPY . .
 RUN addgroup -S databox && adduser -S -g databox databox
 RUN GGO_ENABLED=0 GOOS=linux go build -a -tags netgo -installsuffix netgo -ldflags '-s -w' -o app /src/*.go
