--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -9,16 +9,16 @@ RUN go get -d github.com/cgreenhalgh/hs1xxplug
 RUN addgroup -S databox && adduser -S -g databox databox
 RUN GGO_ENABLED=0 GOOS=linux go build -a -tags netgo -installsuffix netgo -ldflags '-s -w' -o app /src/app.go
 
-FROM amd64/alpine:3.8
-COPY --from=gobuild /etc/passwd /etc/passwd
-RUN apk update && apk add libzmq
-USER databox
-WORKDIR /
-COPY --from=gobuild /app .
-COPY --from=gobuild /www/ /www/
-COPY --from=gobuild /tmpl/ /tmpl/
+#FROM amd64/alpine:3.8
+#COPY --from=gobuild /etc/passwd /etc/passwd
+#RUN apk update && apk add libzmq
+#USER databox
+#WORKDIR /
+#COPY --from=gobuild /app .
+#COPY --from=gobuild /www/ /www/
+#COPY --from=gobuild /tmpl/ /tmpl/
 LABEL databox.type="driver"
 EXPOSE 8080
 
-CMD ["./app"]
-#CMD ["sleep","2147483647"]
+#CMD ["./app"]
+CMD ["sleep","2147483647"]
